Update both vignettes.

--- a/vignettes/Navodila_za_avtorje.Rmd
+++ b/vignettes/Navodila_za_avtorje.Rmd
@@ -21,23 +21,23 @@ Namen te funkcionalnosti, je, da lahko v bazo vnašaš :
 
 ## Postopek
 
-Po tem, ko te Maja Z doda kot avtorja na bazi (to je treba narediti samo enkrat), boš dobil mapo na mreži z imenom `O:\Avtomatizacija\umar-data\<tvoje začetnice>` v kateri bosta dva (Excel) fajla, ki ju moraš "napolniti" s podatki:
+Po tem, ko te Maja Z. doda kot avtorja na bazi (to je treba narediti samo enkrat), dobiš mapo na mreži z imenom `O:\Avtomatizacija\umar-data\<tvoje začetnice>` v kateri bosta dva (Excel) fajla, ki ju moraš "napolniti" s podatki:
 
 * **strukturni fajl** bo opisoval metapodatke za tvoje časovne serije: za vsako serijo ena vrstica, natančna navodila so v poglavju \@ref(meta).
-* **podatkovni fajl** bo vseboval podatke za tvoje časovje serije: za vsako serijo en stolpec, natančna navodila so v poglavju \@ref(data). 
+* **podatkovni fajl** bo vseboval same podatke za tvoje časovne serije: za vsako serijo en stolpec, natančna navodila so v poglavju \@ref(data). 
 
 Postopek bo zaenkrat izgledal tako: 
 
-1. "Izpolniti" moraš strukturni fajl - to moraš narediti vsaj prvič, da vemo katere serije pripravljaš. Če hočeš kasneje dodati nove serije, jih enostavno dodaš že obstoječim.
-2. Podatkovni fajl pripraviš oz. posodobiš vsakič, ko imaš nove podatke na voljo. 
-2. Vsake pol ure se bo izvedla skripta, ki bo preverila ali so kakšni novi oz. posodobljeni fajli v teh mapah in jih uvozila.^[Lahko tudi pokličeš Majo Z. in bo sprožila skripto takoj.]
-3. Na mail boš dobil log z outputom te skripte - število vnesenih vrstic oz. javljene napake, če kaj ni bilo vredu pri pripravljenih podatkih. 
-4. Ob vsaki posodobitvi podatkov se bo tudi poročilo Indikatorji posodobilo, tako da boš lahko svoje podatke - če so v kakšnem od tistih grafov - videl takoj. 
+1. "Izpolniti" moraš strukturni fajl - to moraš narediti samo enkrat, da vemo katere serije pripravljaš. Če hočeš kasneje dodati nove serije, jih enostavno dodaš že obstoječim kot nove vrstice.
+2. Podatkovni fajl pa pripraviš oz. posodobiš vsakič, ko imaš nove podatke na voljo. 
+2. Ob rednih intervalih se bo izvedla skripta, ki bo preverila ali so kakšni novi oz. posodobljeni fajli v teh mapah in jih uvozila v bazo.^[Lahko tudi pokličeš Majo Z. in bo sprožila skripto takoj.]
+3. Na mail potem dobiš log z outputom te skripte - število vnesenih vrstic oz. javljene napake, če kaj ni bilo v redu pri pripravljenih podatkih. 
+4. Ob vsaki posodobitvi podatkov se bo tudi poročilo Indikatorji posodobilo, tako da lahko svoje podatke - če so v kakšnem od tistih grafov - vidiš takoj. 
 
 
 # Metapodatki {#meta}
 
-V mapi  `O:\Avtomatizacija\umar-data\<tvoje začetnice>` boš našel datoteko z imenom `umar_serije_metadata_<tvoje začetnice>.xlsx`. V to datoteko moraš vnesti metapodatke za vsako serijo, ki jo želiš uvažati v bazo. To moraš narediti samo enkrat. Datoteka je prazna in ima samo imena stolpcev, katerih pomen je razložen v nadaljevanju. 
+V mapi  `O:\Avtomatizacija\umar-data\<tvoje začetnice>` najdeš datoteko z imenom `umar_serije_metadata_<tvoje začetnice>.xlsx`. V to datoteko moraš vnesti metapodatke za vsako serijo, ki jo želiš uvažati v bazo. To moraš narediti samo enkrat. Datoteka je prazna in ima samo imena stolpcev, katerih pomen je razložen v nadaljevanju. 
 
 Če imaš samo nekaj posameznih (nepovezanih) serij, potem ti ni treba preveč razmišljati okoli izpolnjevanja metapodatkov in lahko tretiraš vsako serijo kot da je svoja *tabela*. 
 
@@ -50,14 +50,14 @@ V mapi  `O:\Avtomatizacija\umar-data\<tvoje začetnice>` boš našel datoteko z 
 
 Recimo primer: Mojca desezonira podatke o prenočitvah iz SURS-a in ima tri serije: prenočitve domačih gostov, tujih gostov in obojih skupaj. Torej gre za **eno tabelo** z **eno dimenzijo**, ki ima **tri stopnje**. Preden se lotiš izpolnjevanja tabele, najprej razčisti kakšno strukturo imajo tvoji podatki: koliko tabel, katere dimenzije imajo te tabele in katere stopnje. Če ne gre, pokliči Majo Z.!
 
-V nadaljevanju so razložena posamezna polja v tabeli. In ne skrbi: če boš narobe izpolnil tabelo (vem, da je veliko pravil), bi načeloma moral dobiti razumljivo opozorilo, kaj je bilo narobe :)
+V nadaljevanju so razložena posamezna polja v tabeli. In ne skrbi: če narobe izpolniš tabelo (vem, da je veliko pravil), dobiš na mail log z razumljivim opozorilom, kaj je bilo narobe :)
 
 ## `source`
 
-V to polje napišeš vir-e podatkov, kjer imaš načeloma dve možnosti:
+V to polje napišeš vir(e) podatkov, kjer imaš načeloma dve možnosti:
 
-* Če gre za podatke, ki si jih pridobil iz zunanjega vira in nekako obdelal (preračunal, desezoniral itd.), potem napišeš najprej `UMAR` in potem originalen vir, npr: `UMAR, SURS`. (Podobno velja, če si pri preračunih uporabil več virov, npr: `UMAR, SURS, EUROSTAT`.)
-* Če pa hočeš samo uvoziti podatke iz nekega vira, ki ga ne zajemamo avtomatično, ampak nisi podatkov nikakor obdelal, potem napišeš obratno: `Investopedia, UMAR`
+1. Če gre za podatke, ki si jih pridobil iz zunanjega vira in nekako obdelal (preračunal, desezoniral itd.), potem napišeš najprej `UMAR` in potem originalen vir, npr: `UMAR, SURS`. (Podobno velja, če si pri preračunih uporabil več virov, npr: `UMAR, SURS, EUROSTAT`.)
+2. Če pa hočeš samo uvoziti podatke iz nekega vira, ki ga ne zajemamo avtomatično, ampak nisi podatkov nikakor obdelal, potem napišeš obratno: `Investopedia, UMAR`
 
 **Viri morajo biti ena beseda oz. kratica, med seboj jih loči z vejico. In v vsakem primeru mora biti eden od njih "UMAR".**
 
@@ -91,7 +91,7 @@ Vsaka od zgoraj definiranih dimenzij mora imeti eno ali več stopenj. V teh dveh
 * Opis naj bo jedrnat, ampak razumljiv.
 * Koda naj bo super kratka, najbolje ena črka ali številka, ampak ni slabo, če je malo smiselna. 
 
-Na primer za zgornji primer bi bilo primerno nekaj takega:
+Na primer za zgornji primer bi bilo recimo primerno nekaj takega:
 
 | dimension_levels_text | dimension_levels_code |
 |:------- |:-------|
@@ -150,7 +150,7 @@ Enota v kateri so izražene vrednosti serije. Dovoljene so naslednje enote, če 
 
 Opisno ime serije. 
 
-Če opisno ime serije  pustiš prazno, se bo zanj uporabljala vrednost iz polja `dimension_levels_text`. Kar je lahko čisto OK, lahko pa napišeš lepše. Z zgornjim primerom:
+Če opisno ime serije  pustiš prazno, se bo zanj uporabljala vrednost iz polja `dimension_levels_text`. Kar je lahko čisto OK, lahko pa napišeš lepše. Z zgornjim primerom recimo:
 
 | dimension_levels_text |series_name |
 |:------- |:-------|
@@ -161,7 +161,9 @@ Opisno ime serije.
 
 ## To je to
 
-Evo, vem, da je malo zakomplicirano, ampak to je treba samo enkrat narediti. Ko bodo ti metapodatki uspešno zajeti v bazo, se bosta v tej datoteki pojavila še dva nova stolpca:
+Evo, vem, da je malo zakomplicirano, ampak to je treba samo enkrat narediti. Zdaj pokliči Majo Z., da zajame te metapodatke v bazo. 
+
+Ko bodo metapodatki uspešno zajeti v bazo, se bosta v tej isti datoteki pojavila izpolnjena še dva nova stolpca, predvsem drugega od njih rabiš za naslednji del:
 
 * `table_code` in 
 * `series_code`,
@@ -176,15 +178,36 @@ Iz slednje lahko razbereš naslednje:
 * gre za podatke originalno iz SURS-a, ki jih je preračunal nekdo na Umarju.
 * ta nekdo ima inicialke MK (in to je njihova tretja tabela)
 * ta tabela ima dve dimenziji in ta serija ima zanju vrednosti `HRV` in `1` (kar je lahko bolj ali manj informativno)
-* podatki v tej seriji so na mesečni ravni (kar lahk razbereš iz zadnje vrednosti `"M"`)
+* podatki v tej seriji so na mesečni ravni (kar lahko razbereš iz zadnje vrednosti `"M"`)
 
 ## Dodajanje novih serij
 
 V to tabelo lahko vedno dodaš metapodatke za nove serije. Enostavno dodaš nove vrstice, obstoječe pa pustiš pri miru. 
 
-*Potem, ko so metapodatki o serijah enkrat vnešeni, jih ne moreš več popravljati v tej tabeli. Mislim, lahko probaš, ampak se ne bo nič zgodilo, tako da v takem primeru pokliči Majo Z. in bomo to drugače rešili.*
+*Potem, ko so metapodatki o serijah enkrat vneseni, jih ne moreš več popravljati v tej tabeli. Mislim, lahko probaš, ampak se ne bo nič zgodilo, tako da v takem primeru pokliči Majo Z. in bomo to drugače rešili.*
 
 
 # Podatki {#data}
 
+Zdaj, ko imaš v tabeli z metapodatki izpolnjen zadnji stolpec `series_code`, lahko vneseš podatke v drugo Excel datoteko v svojem folderju. Za to datoteko veljajo naslednja pravila:
+
+* Podatki morajo biti shranjeni na zavihkih z imeni "M", "Q" ali "A", glede na interval (mesečni, četrtletni, letni)
+* imena stolpcev morajo biti v prvi vrstici. Na te tri zavihke ne dajaj ničesar drugega kot podatke. Če želiš lahko narediš drug zavihek za svoje zapiske ali karkoli drugega, dokler so na teh treh zavihkih podatki v spodnji obliki. 
+* vsak zavihek, ki vsebuje podatke, mora imeti točno en stolpec z imenom `period`, ki vsebuje obdobja v naslednji obliki:
+  - za mesečne podatke sedemmestno:  recimo 2023M01 ali 1999M12. 
+  - za četrtletne podate šestmestno: recimo 2023Q1 ali 1999Q4
+  - za letne podatke štirimestno: recimo 2023 ali 1999
+* če tvoje serije pokrivajo različna obdobja, še vedno velja, da smeš imeti samo en stolpec z imenom `period` - enostavno pusti prazna polja za tista obdobja, kjer nimaš podatkov
+* vsaka serija - za katero zdaj poznaš `series_code`, ki si ga dobil v Excelu z metapodatki - dobi svoj stolpec. In to je v bistvu to. 
+
+Takole recimo izgleda hipotetična tabela s podatki za dve seriji z mesečnimi podatki. Tabela mora biti na zavihku `M` in imena oz. kode serij morajo obstajati metapodatkih in podatki se bojo brez problema uvozili v bazo. 
+
+<img src="figures/fig1.png" width="250">
+
+## Dodajanje novih podatkov
+
+Ko pripraviš nove podatke, jih enostavno vneseš na ustreznega od teh treh zavihkov ("M", "A", ali "Q") Pri tem velja naslednje:
+
+* podatki za določeno serijo se bodo vnesli v bazo samo, če obstaja nova vrednost za obdobje (`period`), ki še ni bila vnesena v bazo. 
+* vnesla se bo cela serija, tudi podatki za prejšnja obdobja, in se shranila kot nov *vintage*.  
 
