--- a/vignettes/UMARfetchR_workflow.Rmd
+++ b/vignettes/UMARfetchR_workflow.Rmd
@@ -56,7 +56,7 @@ For each new series, the author prepares a row in the metadata Excel file with 8
 * all outputs are logged and the log is emailed to maja.zaloznik@gmail.com and the author's gov.si email. 
 * *This is important: you cannot make changes to the metadata of series you have already imported. The expected procedure is to create a new series.* (I mean a maintainer can always go into the database and fix stuff manually.) Anyway, the funciton treat all series with 11 columns as old and they are not imported again.
 
-The `umar-add_new_series_metadata.R` in the `O:/Avtomatizacija/umar-automation-scripts` repository is the script you want, and you run it manually when an author informs you they have metadata ready for ingestion.
+The `umar-add_new_series_metadata.R` in the `O:/Avtomatizacija/umar-automation-scripts` repository is the script you want, and you run it manually when an author informs you they have metadata ready for ingestion. BUT for easy handling, there is a batch script, which does it all, you just need to pass the author initials to it as an argument. The task `umar-add_series_metadata` on the umar-bi task scheduler is where it's at, you need to pass teh initials by going to properties, actions, select edit the action and then enter the initials including double quotes into the field and run it. The author will receive an email with the log. 
 
 ## Once per data update
 
@@ -65,7 +65,7 @@ Each time an author wants to update their data, they update the data Excel file 
 The function `main_data()` is an umbrella function that does the following:
 
 * reads the file with the data
-* parses it and checks the data is reasonable `parse_data()`, which also checks if there is any difference with the data already in the database.
+* parses it and checks the data is reasonable with `check_data_xlsx()`, which also checks if there is any difference with the data already in the database.
 * `prep_and_import_data()` then imports it into the database if needed.
 
 # Specifications {#specs}
@@ -103,7 +103,7 @@ The data tables must be **tidy**:
 
 The tables must:
 
-* have one and only one column titled **`period`**, which must contain the correctly formatted time e.g. "2020M04" for months or "2023Q4" for quarters and must be incrementally and monotonically increasing i.e. no duplicated period values are allowed.  
+* have one and only one column titled **`period`**, which must contain the correctly formatted time i.e. the first of the month for monthly and quarterly data and simply the year for annual, and must be incrementally and monotonically increasing i.e. no duplicated period values are allowed.  
 * have column names that are legit **`series_code`** values (with the correct interval) and no duplicates
 * have their header in the first row ^[Although this is not strictly necessary, because the Excel reading funciton is quite smart here, just don't tell anyone :)]. 
 
